chore: testing automatic pdf build

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
       - uses: baileyjm02/markdown-to-pdf@v1
         with:
           input_dir: README.md
-          output_dir: README.pdf
+          output_dir: pdfs
         #   images_dir: docs/images
           # for example <img src="./images/file-name.png">
         #   image_import: ./images
