--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: baileyjm02/markdown-to-pdf@v1
         with:
-          input_dir: README.md
+          input_dir: docs
           output_dir: pdfs
         #   images_dir: docs/images
           # for example <img src="./images/file-name.png">
